--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,17 +13,20 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:icon="@mipmap/ic_launcher_final"
+        android:label="Squiggle"
+        android:roundIcon="@mipmap/ic_launcher_final_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
 
         </activity>
-        <activity android:name=".api" />
-        <activity android:name=".api_new" />
-        <activity android:name=".splash">
+        <activity android:name=".api"
+            android:label=""/>
+        <activity android:name=".api_new"
+            android:label=""/>
+        <activity android:name=".splash"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
