--- a/build.gradle
+++ b/build.gradle
@@ -25,3 +25,10 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+buildscript {
+    dependencies {
+        // Add this line
+        classpath 'com.google.gms:google-services:4.0.1'
+    }
+}
